--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://www.paypal.com/sdk/js?client-id=AeX48zJnXWHzUAB5PrbJa9l8HfNHcq1Udfc2O-tlA_VYYyCABgSxrZrmMA_jV27JN79YGQAzUe9ydVWL&currency=CAD"></script>
+    
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
