--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,15 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+		<style>
+			.swal-button 
+			{
+				background-color: #F47676;
+				font-size: 12px;
+				text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+			}
+			</style>
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
